--- a/command-and-control-gui/src/app/tailwind.css
+++ b/command-and-control-gui/src/app/tailwind.css
@@ -2,144 +2,215 @@
 @tailwind components;
 @tailwind utilities;
 
-.glitch {
-    position: relative;
-    overflow: hidden;
-}
+@layer custom {
+    .glitch {
+        position: relative;
+        overflow: hidden;
+    }
 
-.glitch img {
-    position: relative;
-    z-index: 1;
-    display: block;
-}
+    .glitch img {
+        position: relative;
+        z-index: 1;
+        display: block;
+    }
 
-.glitch__layers {
-    position: absolute;
-    z-index: 2;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-}
+    .glitch__layers {
+        position: absolute;
+        z-index: 2;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+    }
 
-.glitch__layer {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background-image: url(/images/globe.png);
-    background-repeat: no-repeat;
-    background-position: 0 0;
-}
+    .glitch__layer {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-image: url(/images/globe.png);
+        background-repeat: no-repeat;
+        background-position: 0 0;
+    }
 
-.glitch__layer:nth-child(1) {
-    transform: translateX(-5%);
-    animation: glitch-anim-1 2s infinite linear alternate, delay-animation 4s infinite linear;
-}
+    .glitch__layer:nth-child(1) {
+        transform: translateX(-5%);
+        animation: glitch-anim-1 2s infinite linear alternate, delay-animation 4s infinite linear;
+    }
 
-.glitch__layer:nth-child(2) {
-    transform: translateX(3%) translateY(3%);
-    animation: glitch-anim-2 2.3s -.8s infinite linear alternate, delay-animation 4.6s -1.6s infinite linear;
-}
+    .glitch__layer:nth-child(2) {
+        transform: translateX(3%) translateY(3%);
+        animation: glitch-anim-2 2.3s -.8s infinite linear alternate, delay-animation 4.6s -1.6s infinite linear;
+    }
 
-.glitch__layer:nth-child(3) {
-    transform: translateX(5%);
-    animation: glitch-anim-flash 1s infinite linear;
-}
+    .glitch__layer:nth-child(3) {
+        transform: translateX(5%);
+        animation: glitch-anim-flash 1s infinite linear;
+    }
 
-@keyframes glitch-anim-1 {
-    0% {
-        clip-path: polygon(0 0%, 100% 0%, 100% 5%, 0 5%);
+    @keyframes glitch-anim-1 {
+        0% {
+            clip-path: polygon(0 0%, 100% 0%, 100% 5%, 0 5%);
+        }
+        10% {
+            clip-path: polygon(0 15%, 100% 15%, 100% 15%, 0 15%);
+        }
+        20% {
+            clip-path: polygon(0 10%, 100% 10%, 100% 20%, 0 20%);
+        }
+        30% {
+            clip-path: polygon(0 1%, 100% 1%, 100% 2%, 0 2%);
+        }
+        40% {
+            clip-path: polygon(0 35%, 100% 35%, 100% 35%, 0 35%);
+        }
+        50% {
+            clip-path: polygon(0 45%, 100% 45%, 100% 46%, 0 46%);
+        }
+        60% {
+            clip-path: polygon(0 50%, 100% 50%, 100% 70%, 0 70%);
+        }
+        70% {
+            clip-path: polygon(0 70%, 100% 70%, 100% 70%, 0 70%);
+        }
+        80% {
+            clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%);
+        }
+        90% {
+            clip-path: polygon(0 50%, 100% 50%, 100% 55%, 0 55%);
+        }
+        100% {
+            clip-path: polygon(0 60%, 100% 60%, 100% 70%, 0 70%);
+        }
     }
-    10% {
-        clip-path: polygon(0 15%, 100% 15%, 100% 15%, 0 15%);
-    }
-    20% {
-        clip-path: polygon(0 10%, 100% 10%, 100% 20%, 0 20%);
-    }
-    30% {
-        clip-path: polygon(0 1%, 100% 1%, 100% 2%, 0 2%);
-    }
-    40% {
-        clip-path: polygon(0 35%, 100% 35%, 100% 35%, 0 35%);
-    }
-    50% {
-        clip-path: polygon(0 45%, 100% 45%, 100% 46%, 0 46%);
-    }
-    60% {
-        clip-path: polygon(0 50%, 100% 50%, 100% 70%, 0 70%);
-    }
-    70% {
-        clip-path: polygon(0 70%, 100% 70%, 100% 70%, 0 70%);
-    }
-    80% {
-        clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%);
-    }
-    90% {
-        clip-path: polygon(0 50%, 100% 50%, 100% 55%, 0 55%);
-    }
-    100% {
-        clip-path: polygon(0 60%, 100% 60%, 100% 70%, 0 70%);
-    }
-}
 
-@keyframes glitch-anim-2 {
-    0% {
-        clip-path: polygon(0 15%, 100% 15%, 100% 30%, 0 30%);
+    @keyframes glitch-anim-2 {
+        0% {
+            clip-path: polygon(0 15%, 100% 15%, 100% 30%, 0 30%);
+        }
+        15% {
+            clip-path: polygon(0 3%, 100% 3%, 100% 3%, 0 3%);
+        }
+        25% {
+            clip-path: polygon(0 8%, 100% 8%, 100% 20%, 0 20%);
+        }
+        30% {
+            clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
+        }
+        45% {
+            clip-path: polygon(0 45%, 100% 45%, 100% 45%, 0 45%);
+        }
+        50% {
+            clip-path: polygon(0 50%, 100% 50%, 100% 57%, 0 57%);
+        }
+        65% {
+            clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
+        }
+        75% {
+            clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%);
+        }
+        80% {
+            clip-path: polygon(0 40%, 100% 40%, 100% 60%, 0 60%);
+        }
+        95% {
+            clip-path: polygon(0 45%, 100% 45%, 100% 60%, 0 60%);
+        }
+        100% {
+            clip-path: polygon(0 11%, 100% 11%, 100% 15%, 0 15%);
+        }
     }
-    15% {
-        clip-path: polygon(0 3%, 100% 3%, 100% 3%, 0 3%);
-    }
-    25% {
-        clip-path: polygon(0 8%, 100% 8%, 100% 20%, 0 20%);
-    }
-    30% {
-        clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
-    }
-    45% {
-        clip-path: polygon(0 45%, 100% 45%, 100% 45%, 0 45%);
-    }
-    50% {
-        clip-path: polygon(0 50%, 100% 50%, 100% 57%, 0 57%);
-    }
-    65% {
-        clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
-    }
-    75% {
-        clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%);
-    }
-    80% {
-        clip-path: polygon(0 40%, 100% 40%, 100% 60%, 0 60%);
-    }
-    95% {
-        clip-path: polygon(0 45%, 100% 45%, 100% 60%, 0 60%);
-    }
-    100% {
-        clip-path: polygon(0 11%, 100% 11%, 100% 15%, 0 15%);
-    }
-}
 
-@keyframes glitch-anim-flash {
-    0% {
-        opacity: .2;
+    @keyframes glitch-anim-flash {
+        0% {
+            opacity: .2;
+        }
+        30%, 100% {
+            opacity: 0;
+        }
     }
-    30%, 100% {
-        opacity: 0;
-    }
-}
 
-@keyframes delay-animation {
-    0% {
-        opacity: 1;
+    @keyframes delay-animation {
+        0% {
+            opacity: 1;
+        }
+        50% {
+            opacity: 1;
+        }
+        50.01% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 0;
+        }
     }
-    50% {
-        opacity: 1;
+
+    /** Glitch Logo */
+    .glitch-container-logo {
+        text-align: center;
     }
-    50.01% {
-        opacity: 0;
+
+    .glitch-logo {
+        margin: 0;
+        font-size: 2.25rem;
+        line-height: normal;
+        font-weight: bold;
+        text-transform: uppercase;
+        position: relative;
+        text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
+        0.025em 0.04em 0 #fffc00;
+        animation: glitch-logo 725ms infinite;
     }
-    100% {
-        opacity: 0;
+
+    .glitch-logo span {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        translate: -50%;
+    }
+
+    .glitch-logo span:first-child {
+        animation: glitch-logo 500ms infinite;
+        clip-path: polygon(0 0, 100% 0, 100% 35%, 0 35%);
+        transform: translate(-0.04em, -0.03em);
+        opacity: 0.75;
+    }
+
+    .glitch-logo span:last-child {
+        animation: glitch-logo 375ms infinite;
+        clip-path: polygon(0 65%, 100% 65%, 100% 100%, 0 100%);
+        transform: translate(0.04em, 0.03em);
+        opacity: 0.75;
+    }
+
+    @keyframes glitch-logo {
+        0% {
+            text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
+            0.025em 0.04em 0 #fffc00;
+        }
+        15% {
+            text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
+            0.025em 0.04em 0 #fffc00;
+        }
+        16% {
+            text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff,
+            -0.05em -0.05em 0 #fffc00;
+        }
+        49% {
+            text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff,
+            -0.05em -0.05em 0 #fffc00;
+        }
+        50% {
+            text-shadow: 0.05em 0.035em 0 #00fffc, 0.03em 0 0 #fc00ff,
+            0 -0.04em 0 #fffc00;
+        }
+        99% {
+            text-shadow: 0.05em 0.035em 0 #00fffc, 0.03em 0 0 #fc00ff,
+            0 -0.04em 0 #fffc00;
+        }
+        100% {
+            text-shadow: -0.05em 0 0 #00fffc, -0.025em -0.04em 0 #fc00ff,
+            -0.04em -0.025em 0 #fffc00;
+        }
     }
 }
