--- a/command-and-control-gui/src/app/tailwind.css
+++ b/command-and-control-gui/src/app/tailwind.css
@@ -214,7 +214,8 @@
 }
 
 ::-webkit-scrollbar {
-    width: 8px
+    width: 8px;
+    height: 8px;
 }
 
 ::-webkit-scrollbar-track {
@@ -225,11 +226,11 @@
 ::-webkit-scrollbar-thumb {
     background: #52525b;
     border-radius: 5px;
-
 }
 
 @supports not selector(::-webkit-scrollbar) {
     body {
+        scrollbar-gutter: stable both-edges;
         scrollbar-color: #52525b transparent;
     }
 }
